--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -409,35 +409,36 @@ jobs:
             X64SUM="${{ steps.sums.outputs.x64sum }}"
             ARMSUM="${{ steps.sums.outputs.armsum }}"
 
-            export X64 ARM X64SUM ARMSUM
+            # pkgver setzen
+            awk -v ver="$NEWVER" '"'"'{ if ($0 ~ /^[[:space:]]*pkgver=/) { print "pkgver=" ver; next } print }'"'"' "$PKG" > "$PKG.tmp" && mv "$PKG.tmp" "$PKG"
 
-            awk -v ver="$NEWVER" '"'"'/^pkgver=/{print "pkgver=" ver; next} {print}'"'"' "$PKG" > "$PKG.tmp" && mv "$PKG.tmp" "$PKG"
-
-            CURVER=$(grep -E "^pkgver=" "$PKG" | head -n1 | cut -d= -f2 || true)
-            if grep -qE "^pkgrel=" "$PKG"; then
+            # pkgrel pflegen
+            CURVER=$(grep -E "^[[:space:]]*pkgver=" "$PKG" | head -n1 | cut -d= -f2 || true)
+            if grep -qE "^[[:space:]]*pkgrel=" "$PKG"; then
               if [ "$CURVER" = "$NEWVER" ]; then
-                awk '"'"'/^pkgrel=/{sub(/^pkgrel=/,""); print "pkgrel=" ($0+1); next} {print}'"'"' "$PKG" > "$PKG.tmp" && mv "$PKG.tmp" "$PKG"
+                awk '"'"'{ if ($0 ~ /^[[:space:]]*pkgrel=/) { sub(/^.*=/,""); print "pkgrel=" ($0+1); next } print }'"'"' "$PKG" > "$PKG.tmp" && mv "$PKG.tmp" "$PKG"
               else
-                awk '"'"'/^pkgrel=/{print "pkgrel=1"; next} {print}'"'"' "$PKG" > "$PKG.tmp" && mv "$PKG.tmp" "$PKG"
+                awk '"'"'{ if ($0 ~ /^[[:space:]]*pkgrel=/) { print "pkgrel=1"; next } print }'"'"' "$PKG" > "$PKG.tmp" && mv "$PKG.tmp" "$PKG"
               fi
             else
               echo "pkgrel=1" >> "$PKG"
             fi
 
-            cat > /tmp/rewrite.awk <<'"'"'AWK'"'"'
-            BEGIN { pv = "$" "{pkgver}" }
-            /^source_x86_64=/      { print "source_x86_64=(\"podliner-" pv "-linux-x64.tar.gz::" ENVIRON["X64"] "\")"; next }
-            /^source_aarch64=/     { print "source_aarch64=(\"podliner-" pv "-linux-arm64.tar.gz::" ENVIRON["ARM"] "\")"; next }
-            /^sha256sums_x86_64=/  { print "sha256sums_x86_64=(\"" ENVIRON["X64SUM"] "\")"; next }
-            /^sha256sums_aarch64=/ { print "sha256sums_aarch64=(\"" ENVIRON["ARMSUM"] "\")"; next }
-            { print }
-            AWK
+            # Quellen & Sums ersetzen (kein Heredoc, keine ENVIRON)
+            awk -v x64="$X64" -v arm="$ARM" -v sx64="$X64SUM" -v sarm="$ARMSUM" '"'"'
+              BEGIN { pv = "$" "{pkgver}" }
+              /^[[:space:]]*source_x86_64=/      { print "source_x86_64=(\"podliner-" pv "-linux-x64.tar.gz::" x64 "\")"; next }
+              /^[[:space:]]*source_aarch64=/     { print "source_aarch64=(\"podliner-" pv "-linux-arm64.tar.gz::" arm "\")"; next }
+              /^[[:space:]]*sha256sums_x86_64=/  { print "sha256sums_x86_64=(\"" sx64 "\")"; next }
+              /^[[:space:]]*sha256sums_aarch64=/ { print "sha256sums_aarch64=(\"" sarm "\")"; next }
+              { print }
+            '"'"' "$PKG" > "$PKG.tmp" && mv "$PKG.tmp" "$PKG"
 
-            awk -f /tmp/rewrite.awk "$PKG" > "$PKG.tmp"
-            mv "$PKG.tmp" "$PKG"
+            echo "----- PKGBUILD after rewrite (checks) -----"
+            grep -E "^(pkgver=|pkgrel=|source_(x86_64|aarch64)=|sha256sums_)" "$PKG" || true
 
-            echo "----- PKGBUILD after rewrite -----"
-            sed -n "1,160p" "$PKG"
+            # Harte Guards: Sums müssen exakt passen
+            grep -q "$X64SUM" "$PKG" && grep -q "$ARMSUM" "$PKG" || { echo "Checksum update failed"; exit 1; }
           '
 
 
