--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,11 @@ on:
     tags:
       - "v*"
   workflow_dispatch:
+    inputs:
+      bootstrap_winget:
+        description: "Create/Bootstrap the winget package (first time only)"
+        type: boolean
+        default: false
 
 jobs:
   build-linux:
@@ -99,28 +104,22 @@ jobs:
           -p:AssemblyInformationalVersion=${{ steps.meta.outputs.version }}
           -o publish\win-x64
 
-      - name: Package zip
+      - name: Prepare dist (zip + exe)
         shell: pwsh
         run: |
           New-Item -Type Directory package\podliner | Out-Null
           Copy-Item publish\win-x64\StuiPodcast.App.exe package\podliner\podliner.exe
           If (Test-Path LICENSE) { Copy-Item LICENSE package\podliner\ }
           If (Test-Path README.md) { Copy-Item README.md package\podliner\ }
-          Compress-Archive -Path package\podliner\* -DestinationPath podliner-win-x64.zip
-          New-Item -Type Directory dist | Out-Null
-          Move-Item podliner-win-x64.zip dist\
+          Compress-Archive -Path package\podliner\* -DestinationPath dist\podliner-win-x64.zip
 
-      - name: Upload artifact (zip)
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: podliner-win-x64
-          path: dist/podliner-win-x64.zip
-
-      - name: Upload raw exe artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: podliner-win-x64-exe
-          path: publish/win-x64/StuiPodcast.App.exe
+          name: podliner-win-x64-bundle
+          path: |
+            dist/podliner-win-x64.zip
+            dist/podliner-win-x64.exe
 
   build-macos:
     name: build macOS (${{ matrix.rid }})
@@ -182,8 +181,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-linux, build-windows, build-macos]
     timeout-minutes: 20
-    outputs:
-      version: ${{ steps.meta.outputs.version }}
     steps:
       - uses: actions/checkout@v4
 
@@ -199,26 +196,12 @@ jobs:
         with:
           path: gathered
 
-      - name: Download Windows EXE artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: podliner-win-x64-exe
-          path: gathered/podliner-win-x64-exe
-
       - name: Gather into dist/
         shell: bash
         run: |
           set -euo pipefail
           mkdir -p dist
-          # alle erzeugten Archive von den Build-Jobs
           find gathered -type f -name 'podliner-*' -exec cp {} dist/ \;
-
-          # EXE aus dem Windows-Artifact sinnvoll benennen
-          if [ -f "gathered/podliner-win-x64-exe/StuiPodcast.App.exe" ]; then
-            cp gathered/podliner-win-x64-exe/StuiPodcast.App.exe dist/podliner-win-x64.exe
-          fi
-
-          # optionale Install-Skripte
           { cp scripts/install.ps1      dist/install.ps1      2>/dev/null || true; }
           { cp scripts/install.sh       dist/install.sh       2>/dev/null || true; }
           { cp scripts/install-macos.sh dist/install-macos.sh 2>/dev/null || true; }
@@ -316,254 +299,60 @@ jobs:
           gh release download "$TAG" -D /tmp/release-verify
           ( cd /tmp/release-verify && sha256sum -c SHA256SUMS )
 
-  aur_publish:
-    name: publish AUR (podliner-bin)
+  # --------- OPTIONAL: first-time creation of the winget package ----------
+  winget-bootstrap:
+    name: bootstrap winget (one-time)
+    runs-on: windows-latest
     needs: publish
-    runs-on: ubuntu-latest
-    container:
-      image: archlinux:base
-    env:
-      AUR_PACKAGE: podliner-bin
-      AUR_EMAIL: ${{ secrets.AUR_EMAIL }}
-      AUR_USERNAME: ${{ secrets.AUR_USERNAME }}
-      AUR_SSH_PRIVATE_KEY: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
+    if: ${{ github.event_name == 'workflow_dispatch' && inputs.bootstrap_winget }}
     steps:
-      - name: Install tooling
+      - name: Determine version + exe URL (latest tag)
+        id: meta
+        shell: pwsh
         run: |
-          pacman -Sy --noconfirm git base-devel curl jq pacman-contrib openssh
-          git config --global user.name  "${AUR_USERNAME:-podliner-bot}"
-          git config --global user.email "${AUR_EMAIL:-actions@users.noreply.github.com}"
+          $repo = "${{ github.repository }}"
+          $hdr  = @{ Authorization = "token ${{ github.token }}" }
+          $rel  = Invoke-RestMethod -Headers $hdr -Uri "https://api.github.com/repos/$repo/releases/latest"
+          $tag  = $rel.tag_name
+          if (-not $tag) { throw "Could not get latest release tag." }
+          $ver  = $tag.TrimStart('v')
+          $exe  = "https://github.com/$repo/releases/download/$tag/podliner-win-x64.exe"
+          "tag=$tag"    | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+          "version=$ver"| Out-File -FilePath $env:GITHUB_OUTPUT -Append
+          "exeurl=$exe" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
 
-      - name: Setup SSH for AUR (root home)
-        run: |
-          set -euo pipefail
-          install -d -m 700 /root/.ssh
-          [ -n "${AUR_SSH_PRIVATE_KEY}" ] || { echo "AUR_SSH_PRIVATE_KEY is empty (missing secret?)" >&2; exit 1; }
-          printf "%s\n" "$AUR_SSH_PRIVATE_KEY" > /root/.ssh/aur
-          chmod 600 /root/.ssh/aur
-          cat > /root/.ssh/config <<'EOF'
-          Host aur.archlinux.org
-            User aur
-            IdentityFile /root/.ssh/aur
-            IdentitiesOnly yes
-            StrictHostKeyChecking accept-new
-          EOF
-          chmod 600 /root/.ssh/config
-          ssh -F /root/.ssh/config -o BatchMode=yes -T aur@aur.archlinux.org || true
+      - name: Submit to winget-pkgs (creates PR)
+        uses: microsoft/winget-create@v1
+        with:
+          token: ${{ secrets.WINGET_GITHUB_TOKEN }}
+          urls: |
+            ${{ steps.meta.outputs.exeurl }}
+          package_identifier: TimKicker.Podliner
+          package_version: ${{ steps.meta.outputs.version }}
+          package_name: Podliner
+          publisher: TimKicker
+          short_description: Terminal-based podcast player (TUI).
+          license: MIT
 
-      - name: Read release info (robust tag detection)
-        id: rel
-        env:
-          GH_REPO: ${{ github.repository }}
-          GITHUB_TOKEN: ${{ github.token }}
-        run: |
-          set -euo pipefail
-          TAG="${GITHUB_REF_NAME}"
-          if [[ ! "$TAG" =~ ^v[0-9] ]]; then
-            TAG=$(curl -sSL -H "Authorization: Bearer $GITHUB_TOKEN" \
-                   "https://api.github.com/repos/${GH_REPO}/releases/latest" | jq -r .tag_name)
-          fi
-          [ -n "$TAG" ] && [ "$TAG" != "null" ] || { echo "Could not determine release tag"; exit 1; }
-
-          VER="${TAG#v}"
-          API="https://api.github.com/repos/${GH_REPO}/releases/tags/${TAG}"
-
-          X64=$(curl -sSL -H "Authorization: Bearer $GITHUB_TOKEN" "$API" | jq -r '.assets[] | select(.name=="podliner-linux-x64.tar.gz")   | .browser_download_url')
-          ARM=$(curl -sSL -H "Authorization: Bearer $GITHUB_TOKEN" "$API" | jq -r '.assets[] | select(.name=="podliner-linux-arm64.tar.gz") | .browser_download_url')
-
-          [ -n "$X64" ] && [ -n "$ARM" ] || { echo "Required assets not found (podliner-linux-*.tar.gz)"; exit 1; }
-
-          echo "ver=$VER"  >> $GITHUB_OUTPUT
-          echo "x64=$X64"  >> $GITHUB_OUTPUT
-          echo "arm=$ARM"  >> $GITHUB_OUTPUT
-
-      - name: Download assets and compute SHA256
-        id: sums
-        run: |
-          set -euo pipefail
-          mkdir -p /tmp/artifacts
-          curl -Lf "${{ steps.rel.outputs.x64 }}" -o /tmp/artifacts/podliner-linux-x64.tar.gz
-          curl -Lf "${{ steps.rel.outputs.arm }}" -o /tmp/artifacts/podliner-linux-arm64.tar.gz
-          echo "x64sum=$(sha256sum /tmp/artifacts/podliner-linux-x64.tar.gz   | awk '{print $1}')" >> $GITHUB_OUTPUT
-          echo "armsum=$(sha256sum /tmp/artifacts/podliner-linux-arm64.tar.gz | awk '{print $1}')" >> $GITHUB_OUTPUT
-
-      - name: Create unprivileged user for makepkg
-        run: |
-          useradd -m builder
-          install -d -m 755 /tmp/aur
-          chown -R builder:builder /tmp/aur
-
-      - name: Prepare SSH for builder
-        run: |
-          install -d -m 700 /home/builder/.ssh
-          cp /root/.ssh/aur /home/builder/.ssh/aur
-          cat > /home/builder/.ssh/config <<'EOF'
-          Host aur.archlinux.org
-            User aur
-            IdentityFile /home/builder/.ssh/aur
-            IdentitiesOnly yes
-            StrictHostKeyChecking accept-new
-          EOF
-          chown -R builder:builder /home/builder/.ssh
-          chmod 600 /home/builder/.ssh/aur /home/builder/.ssh/config
-
-      - name: Configure git as builder (+safe.directory)
-        run: |
-          runuser -u builder -- git config --global user.name  "${AUR_USERNAME:-podliner-bot}"
-          runuser -u builder -- git config --global user.email "${AUR_EMAIL:-actions@users.noreply.github.com}"
-          runuser -u builder -- git config --global --add safe.directory /tmp/aur
-
-      - name: Clone AUR repo (as builder)
-        run: |
-          runuser -u builder -- bash -lc '
-            GIT_SSH_COMMAND="ssh -F /home/builder/.ssh/config" \
-            git clone "ssh://aur@aur.archlinux.org/${AUR_PACKAGE}.git" /tmp/aur
-          '
-
-      - name: Update PKGBUILD with version, URLs, sums (as builder)
-        shell: bash
-        run: |
-          runuser -u builder -- bash -lc '
-            set -euo pipefail
-            PKG=/tmp/aur/PKGBUILD
-
-            NEWVER="${{ steps.rel.outputs.ver }}"
-            X64="${{ steps.rel.outputs.x64 }}"
-            ARM="${{ steps.rel.outputs.arm }}"
-            X64SUM="${{ steps.sums.outputs.x64sum }}"
-            ARMSUM="${{ steps.sums.outputs.armsum }}"
-
-            export X64 ARM X64SUM ARMSUM
-
-            awk -v ver="$NEWVER" '"'"'/^pkgver=/{print "pkgver=" ver; next} {print}'"'"' "$PKG" > "$PKG.tmp" && mv "$PKG.tmp" "$PKG"
-
-            CURVER=$(grep -E "^pkgver=" "$PKG" | head -n1 | cut -d= -f2 || true)
-            if grep -qE "^pkgrel=" "$PKG"; then
-              if [ "$CURVER" = "$NEWVER" ]; then
-                awk '"'"'/^pkgrel=/{sub(/^pkgrel=/,""); print "pkgrel=" ($0+1); next} {print}'"'"' "$PKG" > "$PKG.tmp" && mv "$PKG.tmp" "$PKG"
-              else
-                awk '"'"'/^pkgrel=/{print "pkgrel=1"; next} {print}'"'"' "$PKG" > "$PKG.tmp" && mv "$PKG.tmp" "$PKG"
-              fi
-            else
-              echo "pkgrel=1" >> "$PKG"
-            fi
-
-            cat > /tmp/rewrite.awk <<'"'"'AWK'"'"'
-            BEGIN { pv = "$" "{pkgver}" }
-            /^source_x86_64=/      { print "source_x86_64=(\"podliner-" pv "-linux-x64.tar.gz::" ENVIRON["X64"] "\")"; next }
-            /^source_aarch64=/     { print "source_aarch64=(\"podliner-" pv "-linux-arm64.tar.gz::" ENVIRON["ARM"] "\")"; next }
-            /^sha256sums_x86_64=/  { print "sha256sums_x86_64=(\"" ENVIRON["X64SUM"] "\")"; next }
-            /^sha256sums_aarch64=/ { print "sha256sums_aarch64=(\"" ENVIRON["ARMSUM"] "\")"; next }
-            { print }
-            AWK
-
-            awk -f /tmp/rewrite.awk "$PKG" > "$PKG.tmp"
-            mv "$PKG.tmp" "$PKG"
-
-            echo "----- PKGBUILD after rewrite -----"
-            sed -n "1,160p" "$PKG"
-          '
-
-      - name: Generate .SRCINFO (as builder)
-        run: |
-          runuser -u builder -- bash -lc 'cd /tmp/aur && makepkg --printsrcinfo > .SRCINFO'
-
-      - name: Commit and push to AUR (as builder)
-        run: |
-          runuser -u builder -- bash -lc '
-            set -euo pipefail
-            cd /tmp/aur
-            git add PKGBUILD .SRCINFO
-            git commit -m "${AUR_PACKAGE} ${{ steps.rel.outputs.ver }} (automated)" || echo "No changes to commit"
-            GIT_SSH_COMMAND="ssh -F /home/builder/.ssh/config" git push origin HEAD:master
-          '
-
-
-  winget:
-    name: winget submit / update
+  # --------- Regular winget update after each release tag ----------
+  submit-to-winget:
+    name: submit to winget
+    runs-on: ubuntu-latest
     needs: publish
-    runs-on: ubuntu-latest
-    env:
-      PKG_ID: TimKicker.Podliner
-      EXE_NAME: podliner-win-x64.exe
-      REPO: ${{ github.repository }}
-      TAG: ${{ github.ref_name }}
-      VER: ${{ needs.publish.outputs.version }}
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Ensure version fallback
+      - name: Tag → version
         id: meta
         shell: bash
         run: |
-          if [ -z "${VER}" ] || [ "${VER}" = "null" ]; then
-            TAG="${GITHUB_REF##*/}"
-            echo "version=${TAG#v}" >> "$GITHUB_OUTPUT"
-          else
-            echo "version=${VER}" >> "$GITHUB_OUTPUT"
-          fi
+          TAG="${GITHUB_REF##*/}"; echo "version=${TAG#v}" >> "$GITHUB_OUTPUT"
 
-      - name: Check if package exists in winget-pkgs
-        id: exists
-        shell: bash
-        run: |
-          set -euo pipefail
-          base="https://raw.githubusercontent.com/microsoft/winget-pkgs/master/manifests"
-          lower="$(echo "${PKG_ID}" | tr '[:upper:]' '[:lower:]')"
-          first="${lower:0:1}"
-          path="${base}/${first}/$(echo "${PKG_ID}" | tr '.' '/')/version"
-          # “version” dir is present only after first submission was merged (any version)
-          if curl -fsI "$path" >/dev/null 2>&1; then
-            echo "present=true"  >> "$GITHUB_OUTPUT"
-          else
-            echo "present=false" >> "$GITHUB_OUTPUT"
-          fi
-
-      - name: Compute SHA256 of EXE from release
-        id: shasum
-        shell: bash
-        run: |
-          set -euo pipefail
-          url="https://github.com/${REPO}/releases/download/${TAG}/${EXE_NAME}"
-          curl -fL "$url" -o "/tmp/${EXE_NAME}"
-          sum="$(sha256sum "/tmp/${EXE_NAME}" | awk '{print $1}')"
-          echo "sha256=${sum}" >> "$GITHUB_OUTPUT"
-          echo "url=${url}"     >> "$GITHUB_OUTPUT"
-
-      # --- INITIAL ONBOARDING PATH (first ever submission) ---
-      - name: Submit NEW package via winget-create (portable)
-        if: steps.exists.outputs.present == 'false'
-        uses: microsoft/winget-create@v2
-        with:
-          token: ${{ secrets.WINGET_TOKEN }}
-          submission-type: submit
-          package-identifier: ${{ env.PKG_ID }}
-          package-version: ${{ steps.meta.outputs.version }}
-          installers: |
-            - InstallerUrl: ${{ steps.shasum.outputs.url }}
-              InstallerSha256: ${{ steps.shasum.outputs.sha256 }}
-              InstallerType: portable
-              Architecture: x64
-              Commands:
-                - podliner
-          package-name: Podliner
-          publisher: Tim Kicker
-          short-description: Terminal-based podcast player (TUI) for Windows, Linux, macOS.
-          license: MIT
-          package-url: https://github.com/${{ env.REPO }}
-          release-notes-url: https://github.com/${{ env.REPO }}/releases/tag/${{ env.TAG }}
-
-      # --- UPDATE PATH (after first PR merged) ---
-      - name: Update existing package via winget-releaser
-        if: steps.exists.outputs.present == 'true'
+      - name: Winget Releaser (updates existing package)
         uses: vedantmgoyal9/winget-releaser@v2
         with:
-          identifier: ${{ env.PKG_ID }}
+          identifier: TimKicker.Podliner
           version: ${{ steps.meta.outputs.version }}
-          token: ${{ secrets.WINGET_TOKEN }}
-          # look for EXE in the GitHub Release assets
-          release-repository: ${{ env.REPO }}
-          release-tag: ${{ env.TAG }}
-          installers-regex: \.(exe|msi|msix|appx)(bundle){0,1}$
-          fork-user: ${{ github.actor }}
-          max-versions-to-keep: 0
+          token: ${{ secrets.WINGET_GITHUB_TOKEN }}
+          installers-regex: '\.(exe|msi|msix|appx)(bundle)?$'
+          release-repository: ${{ github.repository }}
+          release-tag: ${{ github.ref_name }}
+          fork-user: timkicker
