--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -494,7 +494,7 @@ jobs:
       - name: Submit to winget-pkgs (creates PR)
         uses: microsoft/winget-create@v1
         with:
-          token: ${{ secrets.WINGET_GITHUB_TOKEN }}
+          token: ${{ secrets.WINGET_TOKEN }}
           urls: |
             ${{ steps.meta.outputs.exeurl }}
           package_identifier: TimKicker.Podliner
@@ -509,6 +509,8 @@ jobs:
     name: submit to winget
     runs-on: ubuntu-latest
     needs: publish
+    env:
+      GITHUB_TOKEN: ${{ secrets.WINGET_TOKEN }}
     steps:
       - name: Tag → version
         id: meta
@@ -521,8 +523,8 @@ jobs:
         with:
           identifier: TimKicker.Podliner
           version: ${{ steps.meta.outputs.version }}
-          token: ${{ secrets.WINGET_GITHUB_TOKEN }}
+          token: ${{ secrets.WINGET_TOKEN }}
           installers-regex: '\.(exe|msi|msix|appx)(bundle)?$'
-          release-repository: podliner
+          release-repository: ${{ github.repository }}
           release-tag: ${{ github.ref_name }}
           fork-user: timkicker
